--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <div id='bruce-banner'></div>
-    <div id='test'></div>
+    <div id='bruce-pastbar' class='clear'></div>
+    
     <script src='./js/master.min.js'></script>
 </body>
 
